--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,20 +2,34 @@
 h1, h2, h3, p {
 	font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 }
-
-header {
-	background: #333333;
-	margin: 0;
-	padding: 10px;	
+ 
+header h1{
 	color: #fff;
 	text-align: center;
+}
+
+#header_container {
+	background:#333333;
+	border:1px solid #666;
+	height:50px;
+	left:0;
+	position:fixed;
+	width:100%;
+	top:0;
+}
+ 
+#container {
+	margin:0 auto;
+	overflow:auto;
+	padding:80px 0;
+	width:940px;
 }
 
 body {
 	background: #efeee7;
 	color: #333333;
 	margin: 0 auto;
-	padding: 0;
+	padding-top: 100px;
 }
 
 h1 {
