--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,92 @@
 h1, h2, h3, p {
 	font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 }
+
+h1 {
+	font-size: 24px;
+	font-weight: bold;
+}
+
+body {
+	background: lightgrey;
+}
+
+
+header {
+    height: 75px;
+    width: 100%;
+    position: fixed;
+    background: white;
+    top: 0;
+    margin: 0 auto;
+}
+
+a {
+	color: grey;
+}
+
+.menuBar {
+    height: 75px;
+    width: 960px;
+    top: 0;
+    margin: 0 auto;
+}
+
+#myName {
+	position: relative;
+	background: teal;
+	width: 320px;
+	height: 75px;
+	float: left;
+	color: white;
+	text-align: center;
+    line-height: 75px;
+}
+
+#menuOptions {
+	position: relative;
+	width: 320px;
+	height: 75px;
+	float: right;
+	text-align: center;
+    line-height: 75px;
+}
+
+#menuOptions p {
+	text-align: center;
+	width: 33.3%;
+	float: left;
+}
+
+#pageBody {
+	width: 960px;
+	margin: 0 auto;
+	margin-top: 100px;
+}
+
+#about {
+	width: 650px;
+	float: left;
+}
+
+#bioPic {
+	width: 70px;
+	float: left;
+}
+
+#connect {
+	width: 270px;
+	float: left;
+}
+
+.footer {
+	clear: both;
+	width: 100%;
+	height: 42px;
+	background: grey;
+	position: fixed;
+	bottom: 0px;
+	text-align: center;
+    color: white;
+    line-height: 3;
+}
