--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ h1, h2, h3, p {
 	font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 }
 
-h1 {
+h1, h2 {
 	font-size: 24px;
 	font-weight: bold;
 }
@@ -53,10 +53,11 @@ a {
     line-height: 75px;
 }
 
-#menuOptions p {
-	text-align: center;
+#menuOptions a {
+	text-align: right;
 	width: 33.3%;
 	float: left;
+	text-decoration: none;
 }
 
 #pageBody {
@@ -68,6 +69,8 @@ a {
 #about {
 	width: 650px;
 	float: left;
+	margin-right: 40px;
+	background: white;
 }
 
 #bioPic {
@@ -75,9 +78,10 @@ a {
 	float: left;
 }
 
-#connect {
+.connect {
 	width: 270px;
 	float: left;
+	background: white;
 }
 
 .footer {
@@ -88,6 +92,7 @@ a {
 	position: fixed;
 	bottom: 0px;
 	text-align: center;
-    color: white;
-    line-height: 3;
+    color: lightgrey;
+    line-height: 42px;
+    border-top: solid teal 5px;
 }
