--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,14 +4,37 @@ h1, h2, h3, p {
 }
 
 h1, h2 {
-	font-size: 24px;
+	font-size: 34px;
 	font-weight: bold;
+}
+
+h2 {
+	margin: 34px;
+	color: teal;
+}
+
+
+h3 {
+	font-size: 26px;
+	font-weight: bold;
+	margin: 26px;
+	color: teal;
 }
 
 body {
 	background: lightgrey;
 }
 
+a {
+	color: grey;
+	font-size: 21px;
+}
+
+hr {
+	background: lightgrey;
+	height: 4px;
+	border: none;
+}
 
 header {
     height: 75px;
@@ -22,8 +45,8 @@ header {
     margin: 0 auto;
 }
 
-a {
-	color: grey;
+ul {
+	margin-left: 26px;
 }
 
 .menuBar {
@@ -63,7 +86,7 @@ a {
 #pageBody {
 	width: 960px;
 	margin: 0 auto;
-	margin-top: 100px;
+	margin-top: 115px;
 }
 
 #about {
@@ -73,26 +96,53 @@ a {
 	background: white;
 }
 
+#about hr {
+	margin-left: 34px;
+	margin-right: 34px;
+}
+
 #bioPic {
-	width: 70px;
+	width: 170px;
+	margin: 20px;
+	margin-left: 34px;
+	margin-bottom: 10px;
 	float: left;
+}
+
+#about p {
+	margin: 20px;
+	color: grey;
+	font-size: 21px;
 }
 
 .connect {
 	width: 270px;
+	height: 220px;
 	float: left;
 	background: white;
+}
+
+.connect hr {
+	margin-left: 26px;
+	margin-right: 26px;
+}
+
+.social {
+	width: 70px;
+	float: left;
+	margin-right: 3px;
+	margin-top: 20px;
 }
 
 .footer {
 	clear: both;
 	width: 100%;
-	height: 42px;
+	height: 61px;
 	background: grey;
 	position: fixed;
 	bottom: 0px;
 	text-align: center;
     color: lightgrey;
-    line-height: 42px;
-    border-top: solid teal 5px;
+    line-height: 61px;
+    border-top: solid teal 7px;
 }
