--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,7 @@ input {
     width: 150px;
     height: 50px;
     background: teal;
+    margin-top: 20px;
     color: white;
     font-size: 21px;
     border: none;
